--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mongodb": "^6.3.0",
     "mongoose": "^6.0.12",
     "morgan": "~1.9.1",
-    "pug": "^2.0.4"
+    "pug": "^2.0.4",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
